@@ -1,6 +1,5 @@
 package net.minestom.server.adventure.audience;
 
-import com.google.common.collect.Iterables;
 import net.kyori.adventure.audience.Audience;
 import net.kyori.adventure.key.Key;
 import net.minestom.server.MinecraftServer;
@@ -8,20 +7,18 @@ import net.minestom.server.command.ConsoleSender;
 import net.minestom.server.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collection;
-import java.util.Collections;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 /**
  * A provider of iterable audiences.
  */
 class IterableAudienceProvider implements AudienceProvider<Iterable<? extends Audience>> {
-
-    private final Collection<ConsoleSender> console = Collections.singleton(MinecraftServer.getCommandManager().getConsoleSender());
+    private final List<ConsoleSender> console = List.of(MinecraftServer.getCommandManager().getConsoleSender());
     private final AudienceRegistry registry = new AudienceRegistry(new ConcurrentHashMap<>(), CopyOnWriteArrayList::new);
 
     protected IterableAudienceProvider() {
@@ -29,7 +26,11 @@ class IterableAudienceProvider implements AudienceProvider<Iterable<? extends Au
 
     @Override
     public @NotNull Iterable<? extends Audience> all() {
-        return Iterables.concat(this.players(), this.console(), this.customs());
+        List<Audience> all = new ArrayList<>();
+        this.players().forEach(all::add);
+        this.console().forEach(all::add);
+        this.customs().forEach(all::add);
+        return all;
     }
 
     @Override
@@ -39,7 +40,7 @@ class IterableAudienceProvider implements AudienceProvider<Iterable<? extends Au
 
     @Override
     public @NotNull Iterable<? extends Audience> players(@NotNull Predicate<Player> filter) {
-        return MinecraftServer.getConnectionManager().getOnlinePlayers().stream().filter(filter).collect(Collectors.toList());
+        return MinecraftServer.getConnectionManager().getOnlinePlayers().stream().filter(filter).toList();
     }
 
     @Override
@@ -49,7 +50,10 @@ class IterableAudienceProvider implements AudienceProvider<Iterable<? extends Au
 
     @Override
     public @NotNull Iterable<? extends Audience> server() {
-        return Iterables.concat(this.players(), this.console());
+        List<Audience> all = new ArrayList<>();
+        this.players().forEach(all::add);
+        this.console().forEach(all::add);
+        return all;
     }
 
     @Override
@@ -64,7 +68,7 @@ class IterableAudienceProvider implements AudienceProvider<Iterable<? extends Au
 
     @Override
     public @NotNull Iterable<? extends Audience> custom(@NotNull Key key, Predicate<Audience> filter) {
-        return StreamSupport.stream(this.registry.of(key).spliterator(), false).filter(filter).collect(Collectors.toList());
+        return StreamSupport.stream(this.registry.of(key).spliterator(), false).filter(filter).toList();
     }
 
     @Override
@@ -74,7 +78,7 @@ class IterableAudienceProvider implements AudienceProvider<Iterable<? extends Au
 
     @Override
     public @NotNull Iterable<? extends Audience> all(@NotNull Predicate<Audience> filter) {
-        return StreamSupport.stream(this.all().spliterator(), false).filter(filter).collect(Collectors.toList());
+        return StreamSupport.stream(this.all().spliterator(), false).filter(filter).toList();
     }
 
     @Override
