@@ -9,7 +9,6 @@ import net.minestom.server.utils.binary.Writeable;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * A full query response containing a dynamic set of responses.
@@ -36,13 +35,13 @@ public class FullQueryResponse implements Writeable {
         this.players = MinecraftServer.getConnectionManager().getOnlinePlayers()
                 .stream()
                 .map(player -> PLAIN.serialize(player.getName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
      * Puts a key-value mapping into the response.
      *
-     * @param key the key
+     * @param key   the key
      * @param value the value
      */
     public void put(@NotNull QueryKey key, @NotNull String value) {
@@ -52,7 +51,7 @@ public class FullQueryResponse implements Writeable {
     /**
      * Puts a key-value mapping into the response.
      *
-     * @param key the key
+     * @param key   the key
      * @param value the value
      */
     public void put(@NotNull String key, @NotNull String value) {
@@ -82,7 +81,7 @@ public class FullQueryResponse implements Writeable {
      *
      * @param players the players
      */
-    public void addPlayers(@NotNull String @NotNull... players) {
+    public void addPlayers(@NotNull String @NotNull ... players) {
         Collections.addAll(this.players, players);
     }
 
@@ -143,7 +142,7 @@ public class FullQueryResponse implements Writeable {
         writer.writeBytes(PADDING_11);
 
         // key-values
-        for (Map.Entry<String, String> entry : this.kv.entrySet()) {
+        for (var entry : this.kv.entrySet()) {
             writer.writeNullTerminatedString(entry.getKey(), Query.CHARSET);
             writer.writeNullTerminatedString(entry.getValue(), Query.CHARSET);
         }
